--- a/src/components/Menu/index.css
+++ b/src/components/Menu/index.css
@@ -34,7 +34,7 @@
 
 .sideBar{
 	height: 100%;
-	width: 16%;
+	width: 18%;
 	position: fixed;
 	z-index: 1;
 	top: 0;
