--- a/src/components/Pages/index.css
+++ b/src/components/Pages/index.css
@@ -56,9 +56,14 @@ tr.p-highlight {
     border: 1px solid rgba(0,0,0,.125);
 }
 
-.pieCol {
-    padding-left: 25px !important;
-    padding-right: 25px !important;
+.pieCol-1 {
+    padding-left: 30px !important;
+    padding-right: 30px !important;
+}
+
+.pieCol-2 {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
 }
 
 .card {
